Fixed horizontal scroll and added grid figure

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html, body {
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: auto;
 }
 
 * {
@@ -13,7 +13,7 @@ header {
   position: fixed;
   display: flex;
   justify-content: stretch;
-  width: 100vw;
+  width: 100%;
   height: 33px;
   padding: 4px 15px;
   border-bottom: solid 1px #e2e2e2;
@@ -76,7 +76,7 @@ main {
   align-items: center;
   top: 35px;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   padding: 60px;
   font-family: "nyt-franklin";
 }
@@ -316,16 +316,49 @@ section.article a {
 }
 
 .image-wrapper {
+  /* display: grid;
+  grid-template-columns: repeat(4, 228px);
+  align-items: end;
+  align-content: space-evenly;
+  justify-content: center;
+  grid-gap: 30px; */
   background-image: url("images/inflation.png");
   height: 576px;
-  background-repeat: none;
+  background-size: cover;
+}
+
+.grid-wrapper {
+  border: 1px red solid;
+  display: grid;
+  grid-template-columns: repeat(4, 228px);
+  align-items: end;
+  align-content: space-between;
+  justify-content: center;
+  grid-gap: 100px 25px;
+  padding-top: 160px;
 }
 
 .grid-display > h1 {
   font-size: 1.25rem;
   line-height: 1.5rem;
   font-weight: 700;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
+}
+
+.grid-display p {
+  display: inline;
+  font-size: 14px;
+  line-height: 1.3em;
+  font-weight: 400;
+  color: #666;
+}
+
+.grid-display span {
+  font-size: 11px;
+  line-height: 11px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-right: 5px;
 }
 
 .grid-display > .lead-in {
@@ -336,3 +369,8 @@ section.article a {
   margin-right: 7px;
   margin-bottom: 10px;
 }
+
+/* .inflation-credit {
+  margin-top: 100px;
+  border: green solid 1px;
+} */
